PUT for updating an org and swagger updates
